--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Test task{% block title %}{% endblock %}</title>
+    <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
     <!-- meta -->
     <meta name="description" content="">
     <meta name="author" content="">
